--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,14 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "dns": "^0.2.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "fs": "^0.0.1-security",
+    "mongodb": "^5.7.0",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
     "next": "^13.4.12",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
